agregando los ejercicios del curso

--- a/curso-frontend-dev/index.html
+++ b/curso-frontend-dev/index.html
@@ -16,6 +16,204 @@
     <title>Curso Frontend Developer</title>
 </head>
 <body>
-    
+    <section class="hero_container">
+        <div class="grid_container">
+            <div class="card">
+                <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="bike" class="card_image">
+                <div class="card_description">
+                    <div class="card_text">
+                        <h3 class="title">$35,00</h3>
+                        <p class="subtitle">Mountain bike</p>
+                    </div>
+                    <div class="card_icon">
+                        <img src="assets/icons/bt_add_to_cart.svg" alt="add to cart">
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                    alt="bike" class="card_image">
+                <div class="card_description">
+                    <div class="card_text">
+                        <h3 class="title">$35,00</h3>
+                        <p class="subtitle">Mountain bike</p>
+                    </div>
+                    <div class="card_icon">
+                        <img src="assets/icons/bt_add_to_cart.svg" alt="add to cart">
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                    alt="bike" class="card_image">
+                <div class="card_description">
+                    <div class="card_text">
+                        <h3 class="title">$35,00</h3>
+                        <p class="subtitle">Mountain bike</p>
+                    </div>
+                    <div class="card_icon">
+                        <img src="assets/icons/bt_add_to_cart.svg" alt="add to cart">
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                    alt="bike" class="card_image">
+                <div class="card_description">
+                    <div class="card_text">
+                        <h3 class="title">$35,00</h3>
+                        <p class="subtitle">Mountain bike</p>
+                    </div>
+                    <div class="card_icon">
+                        <img src="assets/icons/bt_add_to_cart.svg" alt="add to cart">
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                    alt="bike" class="card_image">
+                <div class="card_description">
+                    <div class="card_text">
+                        <h3 class="title">$35,00</h3>
+                        <p class="subtitle">Mountain bike</p>
+                    </div>
+                    <div class="card_icon">
+                        <img src="assets/icons/bt_add_to_cart.svg" alt="add to cart">
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                    alt="bike" class="card_image">
+                <div class="card_description">
+                    <div class="card_text">
+                        <h3 class="title">$35,00</h3>
+                        <p class="subtitle">Mountain bike</p>
+                    </div>
+                    <div class="card_icon">
+                        <img src="assets/icons/bt_add_to_cart.svg" alt="add to cart">
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                    alt="bike" class="card_image">
+                <div class="card_description">
+                    <div class="card_text">
+                        <h3 class="title">$35,00</h3>
+                        <p class="subtitle">Mountain bike</p>
+                    </div>
+                    <div class="card_icon">
+                        <img src="assets/icons/bt_add_to_cart.svg" alt="add to cart">
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                    alt="bike" class="card_image">
+                <div class="card_description">
+                    <div class="card_text">
+                        <h3 class="title">$35,00</h3>
+                        <p class="subtitle">Mountain bike</p>
+                    </div>
+                    <div class="card_icon">
+                        <img src="assets/icons/bt_add_to_cart.svg" alt="add to cart">
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                    alt="bike" class="card_image">
+                <div class="card_description">
+                    <div class="card_text">
+                        <h3 class="title">$35,00</h3>
+                        <p class="subtitle">Mountain bike</p>
+                    </div>
+                    <div class="card_icon">
+                        <img src="assets/icons/bt_add_to_cart.svg" alt="add to cart">
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                    alt="bike" class="card_image">
+                <div class="card_description">
+                    <div class="card_text">
+                        <h3 class="title">$35,00</h3>
+                        <p class="subtitle">Mountain bike</p>
+                    </div>
+                    <div class="card_icon">
+                        <img src="assets/icons/bt_add_to_cart.svg" alt="add to cart">
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                    alt="bike" class="card_image">
+                <div class="card_description">
+                    <div class="card_text">
+                        <h3 class="title">$35,00</h3>
+                        <p class="subtitle">Mountain bike</p>
+                    </div>
+                    <div class="card_icon">
+                        <img src="assets/icons/bt_add_to_cart.svg" alt="add to cart">
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                    alt="bike" class="card_image">
+                <div class="card_description">
+                    <div class="card_text">
+                        <h3 class="title">$35,00</h3>
+                        <p class="subtitle">Mountain bike</p>
+                    </div>
+                    <div class="card_icon">
+                        <img src="assets/icons/bt_add_to_cart.svg" alt="add to cart">
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                    alt="bike" class="card_image">
+                <div class="card_description">
+                    <div class="card_text">
+                        <h3 class="title">$35,00</h3>
+                        <p class="subtitle">Mountain bike</p>
+                    </div>
+                    <div class="card_icon">
+                        <img src="assets/icons/bt_add_to_cart.svg" alt="add to cart">
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                    alt="bike" class="card_image">
+                <div class="card_description">
+                    <div class="card_text">
+                        <h3 class="title">$35,00</h3>
+                        <p class="subtitle">Mountain bike</p>
+                    </div>
+                    <div class="card_icon">
+                        <img src="assets/icons/bt_add_to_cart.svg" alt="add to cart">
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                    alt="bike" class="card_image">
+                <div class="card_description">
+                    <div class="card_text">
+                        <h3 class="title">$35,00</h3>
+                        <p class="subtitle">Mountain bike</p>
+                    </div>
+                    <div class="card_icon">
+                        <img src="assets/icons/bt_add_to_cart.svg" alt="add to cart">
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </section>
 </body>
 </html>
