--- a/curso-maquetacion-css-grid/index.html
+++ b/curso-maquetacion-css-grid/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/font/flaticon.css">
 
     <!-- Mono Roboto font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;500;700&display=swap" rel="stylesheet">
 
-    <title>Curso Maquetacion CSS Grid | Index</title>
+    <title>Curso Maquetacion CSS | Index</title>
 </head>
 <body>
 
@@ -21,13 +22,23 @@
             <div class="header__social-media">
                 <div class="social-media__container">
                     <nav class="social-media__nav">
-                        <ul class="social-media__list">
-                            <li><a href="#" class="social-media__link">Facebook</a></li>
-                            <li><a href="#" class="social-media__link">Twitter</a></li>
-                            <li><a href="#" class="social-media__link">Instagram</a></li>
-                            <li><a href="#" class="social-media__link">LinkedIn</a></li>
-                            <li><a href="#" class="social-media__link">YouTube</a></li>
-                        </ul>
+                       <div class="social-media__list">
+                           <a href="#">
+                               <span class="flaticon-001-facebook social-media__icon"></span>
+                           </a>
+                        <a href="#">
+                            <span class="flaticon-002-twitter social-media__icon"></span>
+                        </a>
+                        <a href="#">
+                            <span class="flaticon-011-instagram social-media__icon"></span>
+                        </a>
+                        <a href="#">
+                            <span class="flaticon-008-youtube social-media__icon"></span>
+                        </a>
+                        <a href="#">
+                            <span class="flaticon-010-linkedin social-media__icon"></span>
+                        </a>
+                       </div>
                     </nav>
                 </div>
             </div>
@@ -37,14 +48,14 @@
                     <a href="index.html">
                         <img src="assets/logos/Logo-negro.png" alt="Blog logo" class="about__logo">
                     </a>
-                    <a href="#" class="about__link">Sobre mi</a>
+                    <a href="about.html" class="about__link">Sobre mi</a>
                 </div>
             </div>
         </header>
 
         <main class="main">
             <p class="main__text">Conoce las novedades y noticias del mundo Tech</p>
-            <a href="#" class="main__link">
+            <a href="blogs.html" class="main__link">
                 <button class="main__button">Entra ya!</button>
             </a>
         </main>
