--- a/curso-maquetacion-css-grid/about.html
+++ b/curso-maquetacion-css-grid/about.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/font/flaticon.css">
 
     <!-- Mono Roboto font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;500;700&display=swap" rel="stylesheet">
 
-    <title>Curso Maquetacion CSS Grid | Index</title>
+    <title>Curso Maquetacion CSS | Sobre mi</title>
 </head>
 
 <body>
@@ -22,13 +23,23 @@
             <div class="header__social-media">
                 <div class="social-media__container">
                     <nav class="social-media__nav">
-                        <ul class="social-media__list">
-                            <li><a href="#" class="social-media__link">Facebook</a></li>
-                            <li><a href="#" class="social-media__link">Twitter</a></li>
-                            <li><a href="#" class="social-media__link">Instagram</a></li>
-                            <li><a href="#" class="social-media__link">LinkedIn</a></li>
-                            <li><a href="#" class="social-media__link">YouTube</a></li>
-                        </ul>
+                        <div class="social-media__list">
+                            <a href="#">
+                                <span class="flaticon-001-facebook social-media__icon"></span>
+                            </a>
+                            <a href="#">
+                                <span class="flaticon-002-twitter social-media__icon"></span>
+                            </a>
+                            <a href="#">
+                                <span class="flaticon-011-instagram social-media__icon"></span>
+                            </a>
+                            <a href="#">
+                                <span class="flaticon-008-youtube social-media__icon"></span>
+                            </a>
+                            <a href="#">
+                                <span class="flaticon-010-linkedin social-media__icon"></span>
+                            </a>
+                        </div>
                     </nav>
                 </div>
             </div>
@@ -44,28 +55,10 @@
         </header>
 
         <main class="main">
-            <h1>This is a test</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt rerum quam quaerat, in saepe eveniet
-                recusandae alias nostrum optio reiciendis cum molestiae quia ab accusamus consequuntur dolor iure
-                dignissimos aut placeat ullam, aperiam molestias libero magni. Magni maxime consequuntur temporibus.</p>
-            <h1>This is a test</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt rerum quam quaerat, in saepe eveniet
-                recusandae
-                alias nostrum optio reiciendis cum molestiae quia ab accusamus consequuntur dolor iure dignissimos aut
-                placeat
-                ullam, aperiam molestias libero magni. Magni maxime consequuntur temporibus.</p>
-            <h1>This is a test</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt rerum quam quaerat, in saepe eveniet
-                recusandae
-                alias nostrum optio reiciendis cum molestiae quia ab accusamus consequuntur dolor iure dignissimos aut
-                placeat
-                ullam, aperiam molestias libero magni. Magni maxime consequuntur temporibus.</p>
-            <h1>This is a test</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt rerum quam quaerat, in saepe eveniet
-                recusandae
-                alias nostrum optio reiciendis cum molestiae quia ab accusamus consequuntur dolor iure dignissimos aut
-                placeat
-                ullam, aperiam molestias libero magni. Magni maxime consequuntur temporibus.</p>
+            <p class="main__text">Conoce las novedades y noticias del mundo Tech</p>
+            <a href="" class="main__link">
+                <button class="main__button">Entra ya!</button>
+            </a>
         </main>
 
         <footer class="footer">
