pagina de proyectos terminada

--- a/curso-maquetacion-css-grid/about.html
+++ b/curso-maquetacion-css-grid/about.html
@@ -7,13 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/font/flaticon.css">
+    <link rel="stylesheet" href="css/about.css">
 
     <!-- Mono Roboto font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;500;700&display=swap" rel="stylesheet">
 
-    <title>Curso Maquetacion CSS | Sobre mi</title>
+    <title>Curso Maquetado CSS | Sobre mi</title>
 </head>
 
 <body>
@@ -55,10 +56,69 @@
         </header>
 
         <main class="main">
-            <p class="main__text">Conoce las novedades y noticias del mundo Tech</p>
-            <a href="" class="main__link">
-                <button class="main__button">Entra ya!</button>
-            </a>
+            <div class="main__sections">
+                <div class="section__hello-container">
+                    <section class="section__hello">
+                        <div class="hello__image-container">
+                            <img src="assets/images/profile-pic.jpg" alt="Profile picture" class="hello__image">
+                        </div>
+                        <div class="hello__text-container">
+                            <h2 class="hello__title">Hola!</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum voluptate voluptatibus quaerat dolor? Voluptatum nesciunt ad repudiandae ratione nam quo rem molestiae sequi sit nulla?</p>
+                        </div>
+                    </section>
+                </div>
+               <div class="section__projects-container">
+                    <section class="section__projects">
+                        <div class="projects__title">
+                            <h2>Proyectos</h2>
+                        </div>
+                        <div class="projects">
+                            <div class="project">
+                                <h3 class="project__title">Texto</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur provident cumque quae, reprehenderit recusandae
+                                    et beatae, molestias tenetur tempora dignissimos nam, doloribus autem! Magnam, quam aliquid. Quo ex id deserunt
+                                    temporibus quibusdam atque. Unde consequatur animi quaerat cum nulla suscipit?</p>
+                            </div>
+                            <div class="project">
+                                <h3 class="project__title">Texto</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur provident cumque quae, reprehenderit recusandae
+                                    et beatae, molestias tenetur tempora dignissimos nam, doloribus autem! Magnam, quam aliquid. Quo ex id deserunt
+                                    temporibus quibusdam atque. Unde consequatur animi quaerat cum nulla suscipit?</p>
+                            </div>
+                            <div class="project">
+                                <h3 class="project__title">Texto</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur provident cumque quae, reprehenderit recusandae
+                                    et beatae, molestias tenetur tempora dignissimos nam, doloribus autem! Magnam, quam aliquid. Quo ex id deserunt
+                                    temporibus quibusdam atque. Unde consequatur animi quaerat cum nulla suscipit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae sint dolores blanditiis, voluptatibus explicabo optio veniam ipsa est architecto fugit!</p>
+                            </div>
+                        </div>
+                    </section>
+               </div>
+                <div class="section__contact-container">
+                    <section class="section__contact">
+                        <div class="contact">
+                            <div class="contact__logo-container">
+                                <img src="assets/images/newsletter.png" alt="contact" class="contact__logo">
+                            </div>
+                            <div class="contact__text-container">
+                                <h3 class="contact__title">Contacto</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+
+                        <div class="contact">
+                            <div class="contact__logo-container">
+                                <img src="assets/images/like.png" alt="contact" class="contact__logo">
+                            </div>
+                            <div class="contact__text-container">
+                                <h3 class="contact__title">Escribe</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </div>
         </main>
 
         <footer class="footer">
