--- a/curso-maquetacion-css-grid/index.html
+++ b/curso-maquetacion-css-grid/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;500;700&display=swap" rel="stylesheet">
 
-    <title>Curso Maquetacion CSS | Index</title>
+    <title>Curso Maquetado CSS | Index</title>
 </head>
 <body>
 
