--- a/curso-practico-javascript/figuras.html
+++ b/curso-practico-javascript/figuras.html
@@ -16,7 +16,7 @@
             <nav>
                 <ul class="header__list">
                     <li><a href="#" class="header__link">Figuras Geometricas</a></li>
-                    <li><a href="#" class="header__link">Random</a></li>
+                    <li><a href="descuento.html" class="header__link">Descuento</a></li>
                     <li><a href="#" class="header__link">Random</a></li>
                 </ul>
             </nav>
