--- a/curso-practico-javascript/index.html
+++ b/curso-practico-javascript/index.html
@@ -14,7 +14,7 @@
             <nav>
                 <ul class="header__list">
                     <li><a href="figuras.html" class="header__link">Figuras Geometricas</a></li>
-                    <li><a href="#" class="header__link">Random</a></li>
+                    <li><a href="descuento.html" class="header__link">Descuento</a></li>
                     <li><a href="#" class="header__link">Random</a></li>
                 </ul>
             </nav>
